img和标题用figure包起来

--- a/xiaowei/01/test01.html
+++ b/xiaowei/01/test01.html
@@ -54,23 +54,39 @@
 		<li>因蔬菜品种多销售快，因此如果客户点的蔬菜缺货，默认由农场用其它蔬菜代替。也可以不点菜全部由农场营养搭配（如有不吃的菜请下单时注明）。</li>
 		<li>宅配套餐：欢迎订购宅配套餐，每周定期配送1-2次。</li>
 	</ol>
-	图片：<br>
-	情书一：<br>
-	<img src="ll1.jpg"><br>
-	情书二:<br>
-	<img src="ll2.jpg"><br>
-	情书三:<br>
-	<img src="ll3.jpg"><br>
-	情书四：<br>
-	<img src="ll4.jpg"><br>
-	情书五：<br>
-	<img src="ll5.jpg"><br>
-	情书六：<br>
-	<img src="ll6.jpg"><br>
-	情书七：<br>
-	<img src="ll7.jpg"><br>
-	少年:<br>
-	<img src="young.png" style="width:500px"><br>
+	图片：
+	<figure>
+		<figcaption>情书一</figcaption>
+			<img src="ll1.jpg">
+	</figure>
+	<figure>
+		<figcaption>情书二:</figcaption>
+			<img src="ll2.jpg">
+	</figure>
+	<figure>
+		<figcaption>情书三:</figcaption>
+			<img src="ll3.jpg">
+	</figure>
+	<figure>
+		<figcaption>情书四：</figcaption>
+			<img src="ll4.jpg">
+	</figure>
+	<figure>
+		<figcaption>情书五：</figcaption>
+			<img src="ll5.jpg">
+	</figure>
+	<figure>
+		<figcaption>情书六：</figcaption>
+		<img src="ll6.jpg">
+	</figure>
+	<figure>
+		<figcaption>情书七：</figcaption>
+			<img src="ll7.jpg">
+	</figure>
+	<figure>
+		<figcaption>少年:</figcaption>
+			<img src="young.png" style="width:500px">
+	</figure>
 	<h2>最后一篇</h2>
 	<h3>我写的</h3>
 	me&nbsp;2017-3-25 <br>
