add comment style
change the comment‘s style in form-div, and change the img box so that
picture couldn't overflow from box.

--- a/xiaowei/02/test02.html
+++ b/xiaowei/02/test02.html
@@ -20,7 +20,7 @@
 			<h2>你相不相信</h2>
 			<h3 class="gray-font">一见钟情</h2>
 			<div class="gray-font">李荷西&nbsp;2016-12-06&nbsp; 15:15:27</div>
-			<div>
+			<div style="overflow: auto">
 				版权归作者所有，任何形式转载请联系作者。<br>
 				作者：李荷西<br>
 				<a href = "https://www.douban.com/note/595570137/">来源</a><br>
@@ -146,9 +146,11 @@
 			<form>
 				<p>
 					<label for="email" class="label-in-rows">请输入邮箱地址</label>
-					<input type="email" placeholder="name@email.com" id="email">
+					<input type="email" placeholder="name@email.com" id="email"><br>
 				</p>
-				邮箱地址请按要求格式输入
+				<p>
+					<label class="label-in-rows"></label><span class="span-comment">邮箱地址请按要求格式输入</span>
+				</p>
 				<p>
 					<label for="pwd" class="label-in-rows">请输入密码</label>
 					<input type="password" placeholder="密码" id="pwd">
@@ -157,7 +159,9 @@
 					<label for="doublepwd" class="label-in-rows">请重新输入密码</label>
 					<input type="password" id="doublepwd" placeholder="确认密码">
 				</p>
-				<p>密码请为6-16位英文数字</p>
+				<p>
+					<label class="label-in-rows"></label><span class="span-comment">密码请为6-16位英文数字</span>
+				</p>
 				<p>
 					<label for="sex" class="label-in-rows">性别</label>
 					<sapn id="sex">
